--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/lab": "^5.0.0-alpha.109",
+    "@mui/material": "^5.10.15",
+    "@mui/styles": "^5.10.15",
+    "@svgr/webpack": "^6.5.1",
+    "aos": "^2.3.4",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router": "^6.6.2",
+    "react-router-dom": "^6.6.2",
+    "swiper": "^8.4.5"
   }
 }
