--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@mui/icons-material": "^5.10.15",
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.15",
-    "@mui/styles": "^5.10.15",
     "@svgr/webpack": "^6.5.1",
     "aos": "^2.3.4",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "formik": "^2.2.9",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,6 +26,7 @@
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "styled-components": "^5.3.6",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "yup": "^1.1.1"
   }
 }
