--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@mui/material": "^5.10.15",
     "@svgr/webpack": "^6.5.1",
     "aos": "^2.3.4",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
     "formik": "^2.2.9",
     "next": "13.0.5",
     "react": "18.2.0",
@@ -28,5 +26,9 @@
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.4"
   }
 }
