--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.7.1",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "yup": "^1.1.1"
