--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@mui/material": "^5.10.15",
     "@svgr/webpack": "^6.5.1",
     "aos": "^2.3.4",
+    "body-parser": "^1.20.2",
+    "formidable": "^3.5.0",
     "formik": "^2.2.9",
+    "multer": "^1.4.5-lts.1",
     "next": "13.0.5",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
