--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.7.1",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
+    "react-youtube": "^10.1.0",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
