--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
   "devDependencies": {
     "eslint": "^8.41.0",
     "eslint-config-next": "^13.4.4"
-  }
+  },
+  "proxy": "https://bntblogs.s3.ap-south-1.amazonaws.com"
 }
