--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.10.15",
     "@svgr/webpack": "^6.5.1",
     "aos": "^2.3.4",
+    "aws-sdk": "^2.1531.0",
     "body-parser": "^1.20.2",
     "formidable": "^3.5.0",
     "formik": "^2.2.9",
